--- a/picannotate.ui
+++ b/picannotate.ui
@@ -14,100 +14,69 @@
    <string>PicAnnotate</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QListView" name="listViewClass">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>100</y>
-      <width>221</width>
-      <height>111</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QListView" name="listViewFiles">
-    <property name="geometry">
-     <rect>
-      <x>800</x>
-      <y>240</y>
-      <width>161</width>
-      <height>141</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QGraphicsView" name="graphicsView">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>220</y>
-      <width>221</width>
-      <height>170</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="next_button">
-    <property name="geometry">
-     <rect>
-      <x>520</x>
-      <y>30</y>
-      <width>81</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset theme="go-next"/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pre_button">
-    <property name="geometry">
-     <rect>
-      <x>430</x>
-      <y>30</y>
-      <width>81</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset theme="go-previous"/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="ZoomIn">
-    <property name="geometry">
-     <rect>
-      <x>350</x>
-      <y>30</y>
-      <width>71</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset theme="zoom-in"/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="ZoomOut">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
-      <y>30</y>
-      <width>71</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset theme="zoom-out"/>
-    </property>
-   </widget>
+   <layout class="QGridLayout" name="gridLayout_2">
+    <item row="0" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="ZoomOut">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset theme="zoom-out"/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="ZoomIn">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset theme="zoom-in"/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pre_button">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset theme="go-previous"/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="next_button">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset theme="go-next"/>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="1" column="0">
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QGraphicsView" name="graphicsView"/>
+      </item>
+     </layout>
+    </item>
+    <item row="1" column="1">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item alignment="Qt::AlignRight|Qt::AlignTop">
+       <widget class="QListView" name="listViewClass"/>
+      </item>
+      <item alignment="Qt::AlignRight">
+       <widget class="QListView" name="listViewFiles"/>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -125,6 +94,7 @@
     <addaction name="actionOpen_Image"/>
     <addaction name="actionOpen_Video"/>
     <addaction name="actionOpen_Annotation"/>
+    <addaction name="actionOpen_Folder"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_Directory"/>
     <addaction name="actionExit"/>
@@ -172,11 +142,17 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionOpen_Image">
+   <property name="icon">
+    <iconset theme="applications-graphics"/>
+   </property>
    <property name="text">
     <string>Open Image</string>
    </property>
   </action>
   <action name="actionOpen_Video">
+   <property name="icon">
+    <iconset theme="applications-multimedia"/>
+   </property>
    <property name="text">
     <string>Open Video</string>
    </property>
@@ -197,6 +173,9 @@
    </property>
   </action>
   <action name="actionSave">
+   <property name="icon">
+    <iconset theme="document-save"/>
+   </property>
    <property name="text">
     <string>Save</string>
    </property>
@@ -242,26 +221,41 @@
    </property>
   </action>
   <action name="actionDisplay_RectBox">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Display RectBox</string>
    </property>
   </action>
   <action name="actionDisplay_Label">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Display Label</string>
    </property>
   </action>
   <action name="actionAuto_Save">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Auto Save</string>
    </property>
   </action>
   <action name="actionZoom_In">
+   <property name="icon">
+    <iconset theme="zoom-in"/>
+   </property>
    <property name="text">
     <string>Zoom In</string>
    </property>
   </action>
   <action name="actionZoom_Out">
+   <property name="icon">
+    <iconset theme="zoom-out"/>
+   </property>
    <property name="text">
     <string>Zoom Out</string>
    </property>
@@ -274,6 +268,14 @@
   <action name="actionAbout">
    <property name="text">
     <string>About</string>
+   </property>
+  </action>
+  <action name="actionOpen_Folder">
+   <property name="icon">
+    <iconset theme="folder"/>
+   </property>
+   <property name="text">
+    <string>Open Folder</string>
    </property>
   </action>
  </widget>
