--- a/picannotate.ui
+++ b/picannotate.ui
@@ -14,7 +14,7 @@
    <string>PicAnnotate</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_2">
+   <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -59,22 +59,46 @@
       </item>
      </layout>
     </item>
-    <item row="1" column="0">
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QGraphicsView" name="graphicsView"/>
+    <item row="2" column="1">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>File</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lblCurrentFileNumber">
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>of</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lblFilesInFolder">
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
-    <item row="1" column="1">
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item alignment="Qt::AlignRight|Qt::AlignTop">
-       <widget class="QListView" name="listViewClass"/>
-      </item>
-      <item alignment="Qt::AlignRight">
-       <widget class="QListView" name="listViewFiles"/>
-      </item>
-     </layout>
+    <item row="4" column="1" alignment="Qt::AlignRight">
+     <widget class="QListView" name="listViewFiles"/>
+    </item>
+    <item row="1" column="1" alignment="Qt::AlignRight">
+     <widget class="QListView" name="listViewClass"/>
+    </item>
+    <item row="1" column="0" rowspan="4">
+     <widget class="QGraphicsView" name="graphicsView"/>
     </item>
    </layout>
   </widget>
