--- a/picannotate.ui
+++ b/picannotate.ui
@@ -100,6 +100,38 @@
     <item row="1" column="0" rowspan="4">
      <widget class="QGraphicsView" name="graphicsView"/>
     </item>
+    <item row="0" column="1">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;nc&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lblCurrentnc">
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>of</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lblTotalnc">
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -119,6 +151,7 @@
     <addaction name="actionOpen_Video"/>
     <addaction name="actionOpen_Annotation"/>
     <addaction name="actionOpen_Folder"/>
+    <addaction name="actionRead_YAML"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_Directory"/>
     <addaction name="actionExit"/>
@@ -300,6 +333,11 @@
    </property>
    <property name="text">
     <string>Open Folder</string>
+   </property>
+  </action>
+  <action name="actionRead_YAML">
+   <property name="text">
+    <string>Read YAML</string>
    </property>
   </action>
  </widget>
